# DFTcu

./: .clang-format  .editorconfig  .flake8  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  ARCHITECTURE_ANALYSIS.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  DEVELOPMENT.md  DOCS_INDEX.md  GEMINI.md  MODERNIZATION_GUIDE.md  Makefile  QUICK_REFERENCE.md  README.md  SCF_QE_COMPARISON.md  TN_ALIGNMENT_REPORT.md  UV_WORKFLOW.md  align_step0.py  compare_nonlocal.py  pyproject.toml  test_internal_verify.py
.github/workflows/: benchmark.yml  ci.yml  docs.yml  lint.yml
docs/: ALGORITHM_DIFFERENCES_REPORT.md  BIT_PERFECT_ALIGNMENT_SUCCESS.md  CMakeLists.txt  COMPLETE_VLOC_REPORT.md  DFTcu_QE_Alignment_Report.md  Doxyfile  Doxyfile.in  INITIALIZATION_ALIGNMENT_REPORT.md  MULTI_ELEMENT_IMPLEMENTATION_STATUS.md  MULTI_ELEMENT_SUPPORT_ANALYSIS.md  NONLOCAL_ALIGNMENT_PLAN.md  NONLOCAL_ALIGNMENT_REPORT.md  NONLOCAL_SUCCESS_REPORT.md  NSCF_CLI_DESIGN.md  PHASE0C_DENSE_GRID_IMPLEMENTATION_COMPLETE.md  PHASE2_OPERATOR_ALIGNMENT.md  PHASE3_NL_OPERATOR_ALIGNMENT.md  SCF_ALIGNMENT_PLAN.md  TN_LINESEARCH_REFACTOR.md  TN_LINESEARCH_REFACTOR_CN.md  VLOC_GCUTM_FIX_REPORT.md  VLOC_QE_ALIGNMENT_REPORT.md  VLOC_SUCCESS_SUMMARY.md  abseil_performance_hints.md  cuda_performance_guide.md  revhc_development.md
docs/blog/: ALIGNMENT_REPORT.md  COMPUTATION_GRAPH.md  CONVERGENCE_ANALYSIS.md  KS_DFT_PLAN.md  LINESEARCH_REFACTOR.md  LINESEARCH_REFACTOR_CN.md  OPTIMIZATION_STRATEGIES.md  PBE_EWALD_ALIGNMENT.md  WORKFLOW_HAMILTONIAN_TO_EIGENVALUES.md  index.md
examples/: POSCAR_si  nscf_si.yaml
presets/: README.md
scripts/: extract_qe_indexed.py  extract_vloc_psi_data.sh  format_code.sh  get_qe_pbe_baseline.sh  process_vloc_psi_data.py  setup_dev.sh
src/api/: dftcu_api.cu
src/dftcu/: __init__.py  constants.py  pseudopotential.py  utils.py
src/dftcu/cli/: __init__.py  main.py  pw.py  validate.py
src/dftcu/config/: __init__.py  base.py  grid.py  physics.py  solver.py  task.py
src/dftcu/utils/: upf.py
src/fft/: fft_solver.cuh  gamma_fft_solver.cu  gamma_fft_solver.cuh
src/functional/: density_functional_potential.cu  density_functional_potential.cuh  ewald.cu  ewald.cuh  functional.cuh  hartree.cu  hartree.cuh  local_pseudo_builder.cu  local_pseudo_builder.cuh  local_pseudo_factory.cu  local_pseudo_factory.cuh  local_pseudo_kernels.cuh  local_pseudo_operator.cu  local_pseudo_operator.cuh  nonlocal_pseudo.cu  nonlocal_pseudo.cuh  nonlocal_pseudo_builder.cu  nonlocal_pseudo_builder.cuh  nonlocal_pseudo_factory.cu  nonlocal_pseudo_factory.cuh  nonlocal_pseudo_operator.cu  nonlocal_pseudo_operator.cuh  pseudo.cu  pseudo.cuh  pseudopotential_data.cu  pseudopotential_data.cuh  upf_parser.cu  upf_parser.cuh  wavefunction_builder.cu  wavefunction_builder.cuh
src/math/: bessel.cuh  dcsrch.cu  dcsrch.cuh  field_expr.cuh  interpolation.cuh  linesearch.cu  linesearch.cuh  ylm.cuh
src/model/: atoms.cuh  atoms_factory.cu  atoms_factory.cuh  density_builder.cu  density_builder.cuh  density_factory.cu  density_factory.cuh  field.cuh  grid.cu  grid.cuh  grid_factory.cu  grid_factory.cuh  pseudopotential_data.cu  pseudopotential_data.cuh  wavefunction.cu  wavefunction.cuh  wavefunction_builder.cu  wavefunction_builder.cu_test  wavefunction_builder.cuh  wavefunction_factory.cu  wavefunction_factory.cuh
src/solver/: davidson.cu  davidson.cuh  evaluator.cu  evaluator.cuh  gamma_utils.cu  gamma_utils.cuh  hamiltonian.cu  hamiltonian.cuh  mixer.cu  mixer.cuh  nscf.cu  nscf.cuh  optimizer.cu  optimizer.cuh  phase0_verifier.cu  phase0_verifier.cuh  phase0_verifier_old.cu  scf.cu  scf.cuh  subspace_solver.cu  subspace_solver.cuh  tn_optimizer_legacy.cu  tn_optimizer_legacy.cuh
src/utilities/: common.cuh  constants.cuh  cublas_manager.cuh  error.cuh  gpu_macro.cuh  gpu_vector.cuh  kernels.cu  kernels.cuh  math_utils.cuh  nvrtc_manager.cuh
src/workflow/: nscf_workflow.cu  nscf_workflow.cuh
tests/: CMakeLists.txt  README.md  test_config.py  test_data_loader.cuh  test_ewald_fcc.cu  test_kedf_tf.cu  test_kernels.cuh  test_linesearch.cu  test_utils.cu  test_utils.h
tests/data/inputs/: sic_minimal.in
tests/data/pseudopotentials/: Si.pz-rrkj.UPF
tests/data/qe_reference/sic_minimal/: dftcu_debug_psi_input_to_vloc.txt  dftcu_debug_psi_r_gamma.txt  dftcu_debug_vpsi_g_raw.txt  dftcu_debug_vpsi_g_scaled.txt  dftcu_debug_vpsi_r.txt  manifest.json  sic.out
tests/fixtures/: test_data_loader.cuh  test_fixtures.cuh
tests/integration/functional/: test_hartree.cu  test_lda_pz.cu  test_local_pseudo_operator.cu  test_wavefunction_builder_e2e.cu
tests/integration/solver/: test_hamiltonian_vloc.cu  test_nl_d_convention.cu  test_vloc_index_mapping.cu
tests/nscf_alignment/: main.py
tests/nscf_alignment/phase0c/: test_dense_grid.py  test_dense_grid_basic.py
tests/nscf_step_by_step/: .gitignore  README.md  compare_qe.py  run_nscf.py
tests/nscf_step_by_step/qe_input/: si_nscf.in
tests/python/: README.md  compare_qe_ptp.py  conftest.py  export_qe_data.py  run_oxygen_scf.py  test_alignment_verify.py  test_benchmark_optimizers.py  test_dftcu.py  test_ewald.py  test_ewald_multi.py  test_grid_pseudo.py  test_hartree.py  test_hartree_pseudo.py  test_initial_energies.py  test_ks_hamiltonian.py  test_ks_infrastructure.py  test_ks_qe_alignment.py  test_ks_scf.py  test_ks_solver.py  test_ks_wavefunction.py  test_lda_xc.py  test_linesearch.py  test_linesearch_dft.py  test_nonlocal_alignment.py  test_pbe_xc.py  test_pseudo.py  test_qe_alignment.py  test_qe_live_alignment.py  test_revhc_kedf.py  test_revhc_scaling.py  test_scf.py  test_scf_alignment.py  test_scf_comparison.py  test_tf_kedf.py  test_tf_kedf_benchmark.py  test_tn_comparison.py  test_tn_detailed.py  test_tn_detailed_debug.py  test_tn_step_history.py  test_utils.py  (+3 more)
tests/unit/functional/: test_hartree.cu  test_lda_pz.cu  test_local_pseudo.cu  test_wavefunction_builder.cu
tests/unit/math/: test_bessel.cu  test_interpolation.cu
tests/unit/solver/: test_kinetic_energy.cu  test_vloc_kernel.cu
tests/unit/utilities/: test_simpson.cu
(+15 files in other folders)
